Changed the content up

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Note: Please use our back link in your site (webthemez.com)
           <div class="col-md-9 col-sm-9 col-xs-9"> 
             <!--features 1-->
             <h4>Online Store</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, beatae, esse, aspernatur, alias odio numquam incidunt perspiciatis aliquid voluptate sapiente.</p>
+            <p>Our online store will provide you with multiple color options as well size options. We will be carrying different style's as well as gender options for each product.</p>
             <!--features 1 end--> 
           </div>
         </div>
@@ -72,8 +72,8 @@ Note: Please use our back link in your site (webthemez.com)
           <div class="col-md-3 col-sm-3 col-xs-3 text-center"><img src="images/icon-2.png" data-at2x="img/icon-2@2x.png" alt="Features"></div>
           <div class="col-md-9 col-sm-9 col-xs-9"> 
             <!--features 2-->
-            <h4>Lorem Lpsum</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, beatae, esse, aspernatur, alias odio numquam incidunt perspiciatis aliquid voluptate sapiente.</p>
+            <h4>Customer Service</h4>
+            <p>Our customer service line is available 9-5 everyday and you can always shoot us an email to get a more descriptive explanation to the solution you're looking for.</p>
             <!--features 2 end--> 
           </div>
         </div>
@@ -83,8 +83,8 @@ Note: Please use our back link in your site (webthemez.com)
           <div class="col-md-3 col-sm-3 col-xs-3 text-center"><img src="images/icon-3.png" data-at2x="img/icon-3@2x.png" alt="Features"></div>
           <div class="col-md-9 col-sm-9 col-xs-9"> 
             <!--features 3-->
-            <h4>Lorem Lpsum</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, beatae, esse, aspernatur, alias odio numquam incidunt perspiciatis aliquid voluptate sapiente.</p>
+            <h4>Awesome Payment Options</h4>
+            <p>We carry a wide variety of payment options and different payment plans if you choose. Visa, Mastercard, American Express, and PayPal are all available here.</p>
             <!--features 3 end--> 
           </div>
         </div>
@@ -92,8 +92,8 @@ Note: Please use our back link in your site (webthemez.com)
           <div class="col-md-3 col-sm-3 col-xs-3 text-center"><img src="images/icon-4.png" data-at2x="img/icon-4@2x.png" alt="Features"></div>
           <div class="col-md-9 col-sm-9 col-xs-9"> 
             <!--features 4-->
-            <h4>Lorem Lpsum</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, beatae, esse, aspernatur, alias odio numquam incidunt perspiciatis aliquid voluptate sapiente.</p>
+            <h4>Easily Accessible</h4>
+            <p>Our site has been optimized for all devices including phones and tablets. Thanks to our fantastic development team has given our customers the easibility of ordering products and looking into future purchases.</p>
             <!--features 4 end--> 
           </div>
         </div>
