--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Note: Please use our back link in your site (webthemez.com)
 	<div class="wrapper">
 		<div class="logo">
       <h1>
-        <img style="width: 300px; height: 300px;" src="images/AP_Uniforms.jpg" />
+        <img style="width: 300px; height: 250px;" src="images/AP_Uniforms.jpg" />
       </h1>
     </div>
 	</div>
@@ -40,14 +40,16 @@ Note: Please use our back link in your site (webthemez.com)
 <div id="subscribe">
 	<h3>Subscribe To Get Notified</h3>
 	<form action="" method="post" onsubmit="">
-		<p><input name="" value="Enter your e-mail" type="text" id=""/>
-		<input type="button" value="Submit"/></p>
+		<p>
+      <input name="" placeholder="Enter your email here" type="text" id=""/>
+		  <input type="button" value="Submit"/>
+    </p>
 	</form>
 	<div id="socialIcons">
 		<ul> 
-			<li><a href="" title="Twitter" class="twitterIcon"></a></li>
-			<li><a href="" title="Facebook" class="facebookIcon"></a></li>
-			<li><a href="" title="LinkedIn" class="linkedInIcon"></a></li>
+			<li><a href="https://twitter.com" target="_blank" title="Twitter" class="twitterIcon"></a></li>
+			<li><a href="https://facebook.com" target="_blank" title="Facebook" class="facebookIcon"></a></li>
+			<li><a href="https://linkedin.com" target="_blank" title="LinkedIn" class="linkedInIcon"></a></li>
 		</ul>
 	</div>
 	</div>
@@ -56,7 +58,7 @@ Note: Please use our back link in your site (webthemez.com)
 
 <section class="features spacing">
   <div class="container">
-    <h2 class="text-center">Details</h2>
+    <h2 class="text-center">About Us</h2>
     <div class="row">
       <div class="col-md-6">
         <div class="featuresPro">
@@ -84,7 +86,7 @@ Note: Please use our back link in your site (webthemez.com)
           <div class="col-md-9 col-sm-9 col-xs-9"> 
             <!--features 3-->
             <h4>Awesome Payment Options</h4>
-            <p>We carry a wide variety of payment options and different payment plans if you choose. Visa, Mastercard, American Express, and PayPal are all available here.</p>
+            <p>We carry a wide variety of payment options and different payment plans if you need. Visa, Mastercard, American Express, and PayPal are all available here.</p>
             <!--features 3 end--> 
           </div>
         </div>
@@ -101,6 +103,15 @@ Note: Please use our back link in your site (webthemez.com)
     </div>
   </div>
 </section>
+<div id="footer">
+  <div class="container" style="text-align: center;">
+    <p class="muted credit">Copyright :: FDI Code Lab ::
+    <a href="http://danieldvorkin.com" target="_blank">Daniel Dvorkin</a> and 
+    <a href="http://github.com/ikhakoo" target="_blank">Imran Khakoo</a> and
+    <a href="http://github.com/fayadh" target="_blank">Fayadh al-Mosawi</a>
+    </p>
+  </div>
+</div>
 
 <!--Scripts-->
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script> 
