--- a/index.html
+++ b/index.html
@@ -105,10 +105,11 @@ Note: Please use our back link in your site (webthemez.com)
 </section>
 <div id="footer">
   <div class="container" style="text-align: center;">
-    <p class="muted credit">Copyright :: FDI Code Lab ::
+    <p class="muted credit">Copyright &copy ::
     <a href="http://danieldvorkin.com" target="_blank">Daniel Dvorkin</a> and 
     <a href="http://github.com/ikhakoo" target="_blank">Imran Khakoo</a> and
     <a href="http://github.com/fayadh" target="_blank">Fayadh al-Mosawi</a>
+    :: FDI Code Lab Inc
     </p>
   </div>
 </div>
