--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ Note: Please use our back link in your site (webthemez.com)
 <head>
 <meta charset="utf-8">
 <title>AP-Uniforms Coming Soon</title>
+<link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 <meta name="description" content="">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,bold">
@@ -48,7 +49,7 @@ Note: Please use our back link in your site (webthemez.com)
 	<div id="socialIcons">
 		<ul> 
 			<li><a href="https://twitter.com" target="_blank" title="Twitter" class="twitterIcon"></a></li>
-			<li><a href="https://facebook.com" target="_blank" title="Facebook" class="facebookIcon"></a></li>
+			<li><a href="https://www.facebook.com/pages/AP-Uniforms/1391201987871659" target="_blank" title="Facebook" class="facebookIcon"></a></li>
 			<li><a href="https://linkedin.com" target="_blank" title="LinkedIn" class="linkedInIcon"></a></li>
 		</ul>
 	</div>
