--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Note: Please use our back link in your site (webthemez.com)
           <div class="col-md-9 col-sm-9 col-xs-9"> 
             <!--features 1-->
             <h4>Online Store</h4>
-            <p>Our online store will provide you with multiple color options as well size options. We will be carrying different style's as well as gender options for each product.</p>
+            <p>Our online store will provide you with multiple color options as well size options. We will be carrying different styles for each product. **All products are unisex**</p>
             <!--features 1 end--> 
           </div>
         </div>
