--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Note: Please use our back link in your site (webthemez.com)
 	<div class="wrapper">
 		<div class="logo">
       <h1>
-        <img style="width: 300px; height: 300px;" src="images/AP_Uniforms.jpg" />
+        <img style="width: 300px; height: 300px;" src="images/AP_Uniforms_Transparrent.gif" />
       </h1>
     </div>
 	</div>
