--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Note: Please use our back link in your site (webthemez.com)
 	<div class="wrapper">
 		<div class="logo">
       <h1>
-        <img style="width: 450px; height: 350px;" src="images/AP_Uniforms_Final.png" />
+        <img style="width: 400px; height: 400px; max-width: 100%; max-height: 100%;" src="images/AP_Uniforms_Final.png" />
       </h1>
     </div>
 	</div>
