--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ Note: Please use our back link in your site (webthemez.com)
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>AP-Uniforms Coming Soon</title>
 <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 <meta name="description" content="">
